# Imitation_learning-Proj

./: .gitignore  README.md
debug_rosbag/joints/: joints_0.db3  metadata.yaml
teleop_ws/: MUJOCO_LOG.TXT  setnetip.txt
teleop_ws/src/arm_hand_description/: package.xml  setup.cfg  setup.py
teleop_ws/src/arm_hand_description/mjcf/UR5+gripper/: UR5.xml  UR5gripper.xml
teleop_ws/src/arm_hand_description/mjcf/iiwa/: iiwa_3dof.xml
teleop_ws/src/arm_hand_description/mjcf/kuka_iiwa_14/: iiwa14.xml  scene.xml
teleop_ws/src/arm_hand_description/mjcf/roake/: roake_xMatePro3.xml  x_mate_scene.xml
teleop_ws/src/arm_hand_description/urdf/UR5/: UR5.sdf
teleop_ws/src/arm_hand_description/urdf/UR5/visual/: Base.mtl  Forearm.mtl  Shoulder.mtl  UpperArm.mtl  Wrist2.mtl  Wrist3.mtl
teleop_ws/src/arm_hand_description/urdf/roake/: roake_xMatePro3.sdf
teleop_ws/src/arm_tele_mujo/: package.xml  setup.cfg  setup.py
teleop_ws/src/arm_tele_mujo/arm_tele_mujo/: arm_tele.py  arm_tele_real.py  arm_tele_sim.py  drake_model.py  mjmodel.py
teleop_ws/src/arm_tele_mujo/config/: models.yaml
teleop_ws/src/cam_srv/: package.xml  setup.cfg  setup.py
teleop_ws/src/cam_srv/cam_srv/: gopro.py  wri_cap.py
teleop_ws/src/data_collection/: package.xml  setup.py
teleop_ws/src/data_collection/data_collection/: data_collect.py
teleop_ws/src/force_srv/: package.xml
teleop_ws/src/force_srv/force_srv/: force_srv.py
teleop_ws/src/infer_action_seq/: package.xml  setup.cfg  setup.py
teleop_ws/src/infer_action_seq/infer_action_seq/: vision_Encoder.py
teleop_ws/src/inspire_hand/: package.xml
teleop_ws/src/inspire_hand/inspire_hand/: inspire_sub.py
teleop_ws/src/joint_angles_interface/: CMakeLists.txt  package.xml
teleop_ws/src/joint_angles_interface/srv/: JointAngles.srv
teleop_ws/src/mpc_interpolation/: CMakeLists.txt  package.xml
teleop_ws/src/mpc_interpolation/include/mpc_interpolation/: cubic_spline.hpp  mpc_spline.hpp
teleop_ws/src/mpc_interpolation/src/: cubic_spline.cpp  interpolation.cpp  mpc_spline.cpp
teleop_ws/src/qt_mainwin_control/: CMakeLists.txt  package.xml
teleop_ws/src/qt_mainwin_control/UI/: main_window.ui
teleop_ws/src/qt_mainwin_control/include/qt_mainwin_control/: main_window.hpp
teleop_ws/src/qt_mainwin_control/src/: main.cpp  main_window.cpp
teleop_ws/src/roake_control_interfaces/: CMakeLists.txt  package.xml
teleop_ws/src/roake_control_interfaces/action/: RoakeControl.action
teleop_ws/src/rokae_rt/: CMakeLists.txt  package.xml
teleop_ws/src/rokae_rt/lib/: CMakeLists.txt
teleop_ws/src/rokae_rt/src/: main.cpp
teleop_ws/src/start_up/: CMakeLists.txt  package.xml
teleop_ws/src/start_up/launch/: start.launch.py
teleop_ws/src/wiseglove18/: CMakeLists.txt  package.xml
teleop_ws/src/wiseglove18/include/wiseglove18/: Wiseglove.h
teleop_ws/src/wiseglove18/src/: glove_data_pub.cpp
